--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,7 @@
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="http://127.0.0.1:5000/">Historial On line
       </a>
+      <img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/icono.png') }}" width="120" height="70" alt=""></a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -83,6 +84,7 @@
         <img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/imagen4.jpg') }}" alt=""></a>
       <h2 class="text-center text-uppercase text-white">historial clinico</h2>
       <hr class="star-light mb-5">
+      <h4 style="color: white">Te permite acceder a tu historial médico de forma digital. Además, puedes imprimir todos los documentos e informes que estén incluidos en tu expediente. Pero ten en cuenta que para que estén aquí contenidos, el médico debe haberlos generado de forma electrónica.</h4>
       <div class="row">
         <div class="col-lg-12 ml-auto">
           <p class="lead">
@@ -113,6 +115,7 @@
         <img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/x.jpg') }}" alt="">
       <h2 class="text-center text-uppercase text-secondary mb-0">Estudios clinicos</h2>
       <hr class="star-dark mb-5">
+      <h4 style="color: #20c997">Te permite acceder a tus estudios médicos actuales de forma digital. Además, puedes imprimir todos los documentos e informes que estén incluidos en tu expediente. Pero ten en cuenta que para que estén aquí contenidos, el médico debe haberlos generado de forma electrónica.</h4>
       <div class="row">
 
       </div>
@@ -181,7 +184,7 @@
           <a href="https://api.whatsapp.com/send?phone=595981337645" target="_blank" data-content="https://api.whatsapp.com/send?phone=56956814560" data-type="external" id="comp-jikk6zfu0imagelink" class="lb1imageItemlink"><div data-image-info="{&quot;imageData&quot;:{&quot;type&quot;:&quot;Image&quot;,&quot;id&quot;:&quot;dataItem-jikk6zha1&quot;,&quot;metaData&quot;:{&quot;pageId&quot;:&quot;masterPage&quot;,&quot;isPreset&quot;:false,&quot;schemaVersion&quot;:&quot;2.0&quot;,&quot;isHidden&quot;:false},&quot;title&quot;:&quot;Envíanos un WhatsApp&quot;,&quot;uri&quot;:&quot;a1e890_47221b20cc0448c59ac9687616a78822~mv2.png&quot;,&quot;description&quot;:&quot;&quot;,&quot;width&quot;:256,&quot;height&quot;:256,&quot;alt&quot;:&quot;Envíanos un WhatsApp&quot;,&quot;link&quot;:{&quot;type&quot;:&quot;ExternalLink&quot;,&quot;id&quot;:&quot;dataItem-jikk6zha2&quot;,&quot;metaData&quot;:{&quot;pageId&quot;:&quot;masterPage&quot;,&quot;isPreset&quot;:false,&quot;schemaVersion&quot;:&quot;1.0&quot;,&quot;isHidden&quot;:false},&quot;url&quot;:&quot;https://api.whatsapp.com/send?phone=595981337645&quot;,&quot;target&quot;:&quot;_blank&quot;}},&quot;displayMode&quot;:&quot;fill&quot;}" style="position: absolute; width: 36px; height: 36px;" data-has-bg-scroll-effect="" data-style="position:absolute" class="lb1imageItemimage" id="comp-jikk6zfu0imageimage"><img id="comp-jikk6zfu0imageimageimage" alt="Envíanos un WhatsApp" data-type="image" itemprop="image" style="width: 36px; height: 36px; object-fit: cover;" src="https://static.wixstatic.com/media/a1e890_47221b20cc0448c59ac9687616a78822~mv2.png/v1/fill/w_36,h_36,al_c,q_80,usm_0.66_1.00_0.01/a1e890_47221b20cc0448c59ac9687616a78822~mv2.webp"></div></a>
           <span style="font-weight:bold;"><span class="color_11">
             <span style="text-decoration:underline;">CONTÁCTANOS POR WHATSAPP</span></span>
-            <br> +(595)981337645
+            <br> +(595)981337645 +(595)984530383
         </div>
       </div>
     </div>
