--- a/templates/vacuna.html
+++ b/templates/vacuna.html
@@ -27,7 +27,7 @@
       <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
         <div class="container">
-          <a class="navbar-brand js-scroll-trigger"  href="http://127.0.0.1:5000/">historial on line
+          <a class="navbar-brand js-scroll-trigger"  href="http://127.0.0.1:5000/">Regresar
           </a>
           <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
@@ -45,7 +45,7 @@
               </li>
              
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#agendamientos">agendamiento de consultas</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/otros">Odontologia y Oftetricia</a>
               </li>
     
               <li class="nav-item mx-0 mx-lg-1">
