--- a/templates/index.html
+++ b/templates/index.html
@@ -99,10 +99,10 @@
     </div>
   </section>
 <!-- agendamiento de consultas Grid Section -->
-<section class="agendamiento de consultas" id="agendamientos">
+<section class="agendamiento de consultas" id="otros">
     <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/imagen8.jpg') }}" alt="">
-      <h2 class="text-center text-uppercase text-secondary mb-0">agendamiento de consultas</h2>
+      <h2 class="text-center text-uppercase text-secondary mb-0">Odontologia y Oftetricia</h2>
       <hr class="star-dark mb-5">
 <!--agregar calendario-->
       </div>
