--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
 
   <title>Hisorial On line</title>
   
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <!-- Bootstrap core CSS -->
   <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
 
@@ -135,6 +137,170 @@
         
       </div>
     </section>
+    
+     <!-- nuestro equipo -->
+  <section class="bg-primary text-blue mb-0" id="nuestro equipo">
+      <div class="container">
+    <div class="row">
+        <!-- Team Member 1 -->
+        <div class="col-xl-3 col-md-6 mb-4">
+          <div class="card border-0 shadow">
+            <img src="static/img/equipo/vickysanta.jpg" class="card-img-top" alt="...">
+            <div class="card-body text-center" style="background-color:#000; color:antiquewhite;">
+              <h5 class="card-title mb-0">Paula Garcia</h5>
+              <div class="card-text text-white-50">Desarolladora Frontend</div><br>
+              <div class="fusion-social-networks boxed-icons">
+                  <div class="fusion-social-networks-wrapper">
+                      <ul class="list-inline mb-0">
+                          <li class="list-inline-item">
+                            <a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" href="#">
+                              <i class="fab fa-fw fa-facebook-f"></i>
+                            </a>
+                          </li>
+                          <li class="list-inline-item">
+                            <a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" href="https://www.instagram.com/pausantacruz_/">
+                              <i class="fab fa-fw fa-instagram"></i>
+                            </a>
+                          </li>
+                          <li class="list-inline-item">
+                            <a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" href="#">
+                              <i class="fab fa-fw fa-twitter"></i>
+                            </a>
+                          </li>
+                        </ul>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Team Member 2 -->
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+              <img src="static/img/equipo/Laura.jpg" class="card-img-top" alt="...">
+              <div class="card-body text-center" style="background-color:#000; color:antiquewhite;">
+                <h5 class="card-title mb-0">Laura Gomez</h5>
+                <div class="card-text text-white-50">Desarrolladora Backend</div><br>
+                <div class="fusion-social-networks boxed-icons">
+                    <div class="fusion-social-networks-wrapper">
+                        <ul class="list-inline mb-0">
+                            <li class="list-inline-item">
+                              <a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" href="https://www.facebook.com/profile.php?id=100006373898055">
+                                <i class="fab fa-fw fa-facebook-f"></i>
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" href="https://www.instagram.com/lau_gomezz/">
+                                <i class="fab fa-fw fa-instagram"></i>
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" href="#">
+                                <i class="fab fa-fw fa-twitter"></i>
+                              </a>
+                            </li>
+                          </ul>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        <!-- Team Member 3 -->
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+              <img src="static/img/equipo/mauri.jpg" class="card-img-top" alt="...">
+              <div class="card-body text-center" style="background-color:#000; color:antiquewhite;">
+                <h5 class="card-title mb-0">Mauricio Acosta</h5>
+                <div class="card-text text-white-50">Desarrollador Backend</div><br>
+                <div class="fusion-social-networks boxed-icons">
+                    <div class="fusion-social-networks-wrapper">
+                        <ul class="list-inline mb-0">
+                            <li class="list-inline-item">
+                              <a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" href="https://www.instagram.com/mauricio_acosta33/">
+                                <i class="fab fa-fw fa-facebook-f"></i>
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" href="https://www.instagram.com/mauricio_acosta33/">
+                                <i class="fab fa-fw fa-instagram"></i>
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" href="#">
+                                <i class="fab fa-fw fa-twitter"></i>
+                              </a>
+                            </li>
+                          </ul>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        <!-- Team Member 4 -->
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+              <img src="static/img/equipo/silvi.jpg" class="card-img-top" alt="...">
+              <div class="card-body text-center" style="background-color:#000; color:antiquewhite;">
+                <h5 class="card-title mb-0">Silvani Gimenez</h5>
+                <div class="card-text text-white-50">Community Manager</div><br>
+                <div class="fusion-social-networks boxed-icons">
+                    <div class="fusion-social-networks-wrapper">
+                        <ul class="list-inline mb-0">
+                            <li class="list-inline-item">
+                              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.facebook.com/sylvi.gimenez">
+                                <i class="fab fa-fw fa-facebook-f"></i>
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="">
+                                <i class="fab fa-fw fa-instagram"></i>
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                                <i class="fab fa-fw fa-twitter"></i>
+                              </a>
+                            </li>
+                          </ul>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        <!-- Team Member 5 -->
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+              <img src="static/img/equipo/david.jpg" class="card-img-top" alt="...">
+              <div class="card-body text-center" style="background-color:#000; color:antiquewhite;">
+                <h5 class="card-title mb-0">David Castro</h5>
+                <div class="card-text text-white-50">Desarrollador Frontend</div><br>
+                <div class="fusion-social-networks boxed-icons">
+                    <div class="fusion-social-networks-wrapper">
+                        <ul class="list-inline mb-0">
+                            <li class="list-inline-item">
+                              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                                <i class="fab fa-fw fa-facebook-f"></i>
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.facebook.com/david.castro.3382">
+                                <i class="fab fa-fw fa-instagram"></i>
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                                <i class="fab fa-fw fa-twitter"></i>
+                              </a>
+                            </li>
+                          </ul>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      <!-- /.row -->
+      </div>
+
+  </section>
 
   <!-- Footer -->
   <footer class="footer text-center">
