--- a/templates/estudio.html
+++ b/templates/estudio.html
@@ -37,23 +37,23 @@
             <ul class="navbar-nav ml-auto">
               
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/datos/{{cedula}}">Datos personales</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/datos/{{cedula}}">Datos Personales</a>
               </li>
               
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/historial/{{cedula}}">historial clinico</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/historial/{{cedula}}">Historial Clinico</a>
               </li>
              
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/otros/{{cedula}}">Odontologia y Oftetricia</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/otros/{{cedula}}">Odontologia y Oftalmología</a>
               </li>
     
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/estudio/{{cedula}}">estudios clinicos</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/estudio/{{cedula}}">Estudios Clinicos</a>
               </li>
     
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/vacuna/{{cedula}}">vacunacion</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/vacuna/{{cedula}}">Vacunacion</a>
               </li>
     
             </ul>
@@ -76,19 +76,19 @@
                         <thead>
                           <tr>
                             <th>
-                              fecha inicio
+                              Fecha Inicio
                             </th>
                             <th>
-                              diagnostico medico
+                              Diagnostico Medico
                             </th>
                             <th>
-                              estudios realizados
+                              Estudios Realizados
                             </th>
                             <th>
-                              receta
+                              Receta
                             </th>
                             <th>
-                              fecha culminacion
+                              Fecha Culminacion
                             </th>
                           </tr>
                         </thead>
