--- a/templates/index.html
+++ b/templates/index.html
@@ -55,8 +55,11 @@
       <img class="img-fluid mb-5 d-block mx-auto" src="i" alt="">
       <h1 class="text-uppercase mb-0">salud web</h1>
       <hr class="star-light">
-      <h2 class="font-weight-light mb-0">la salud mas practica,rapida y segura</h2>
-      <a style="color:#000" class="font-weight-light mb-0" href="http://127.0.0.1:5000/registro"title="Te garantizamos seguridad de tus datos" ><h2>Registrate</h2>
+      <h2 class="font-weight-light mb-0">"La salud mas practica,rapida y segura"</h2>
+      <h2 class="font-weight-light mb-0">Salud Web estará disponible 24 horas del dia los 365 días al año: de día, de noche, entre semana o durante el fin de semana
+      <br>
+      <br>
+      <a style="color:#000" class="font-weight-light mb-0" href="http://127.0.0.1:5000/registro" title="Te garantizamos seguridad de tus datos" ><img src="{{ url_for('static', filename='img/registrate.png')}}" width="250" height="100">
       </a>   
     </div>
   </header>
@@ -72,7 +75,7 @@
         <h2 class="text-center text-uppercase text-secondary mb-0">datos personales</h2>
         <hr class="star-dark mb-5">
         <h4 style="color: #20c997">¿Qué es salud Web?</h4>
-        <h4 style="color: #20c997">Salud Web es una plataforma virtual donde podrán consultar un conjunto de sus informes clínicos electrónicos que están disponibles en el Sistema y tener la garantía de que, cuando se desplace fuera de su comunidad tenga sus registros médicos disponibles y si requiera asistencia médica, esta información estén disponibles para los profesionales que lo atiendan en cualquier centro médico.
+        <h4 style="color: #20c997">Salud Web es una plataforma virtual donde podrán consultar un conjunto de sus informes clínicos electrónicos que están disponibles en el sistema y tener la garantía de que, cuando se desplace fuera de su comunidad tenga sus registros médicos disponibles y si requiera asistencia médica, esta información estén disponibles para los profesionales que lo atiendan en cualquier centro médico.
             </h4>
         </div>
       </div>
@@ -98,12 +101,13 @@
       
     </div>
   </section>
-<!-- agendamiento de consultas Grid Section -->
+<!-- Odontologia y Oftalmologia Grid Section -->
 <section class="agendamiento de consultas" id="otros">
     <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/imagen8.jpg') }}" alt="">
-      <h2 class="text-center text-uppercase text-secondary mb-0">Odontologia y Oftetricia</h2>
+      <h2 class="text-center text-uppercase text-secondary mb-0">Odontologia y Oftalmología</h2>
       <hr class="star-dark mb-5">
+      <h4 style="color: #20c997">Los ojos y los dientes no tienen precio y Salud Web lo tiene muy claro la plataforma permite acceder a tus tratamientos odontologicos y oftalmologicos para que puedas consultar en cualquier especialista en todo lugar</h4>
 <!--agregar calendario-->
       </div>
     </div>
@@ -146,12 +150,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 mb-5 mb-lg-0">
-          <h4 class="text-uppercase mb-4">Location</h4>
+          <h4 class="text-uppercase mb-4">Ubicacion</h4>
           <p class="lead mb-0">Casa de Nomadas, Ycua Sati 
             <br>Calle Gumersindo Sosa 1461, Asuncion </p>
         </div>
         <div class="col-md-4 mb-5 mb-lg-0">
-          <h4 class="text-uppercase mb-4">Around the Web</h4>
+          <h4 class="text-uppercase mb-4">Mantenerte Informado</h4>
           <ul class="list-inline mb-0">
             <li class="list-inline-item">
               <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
