--- a/templates/registro.html
+++ b/templates/registro.html
@@ -52,7 +52,7 @@
           <br></h3>
           <h3 class="text-uppercase mb-12"
         style="text-align: center">
-          <input type="text" name="fecha_de_nacimiento"placeholder="Fecha de nacimiento:" >
+          <input type="text" name="fecha_de_nacimiento" placeholder="Fecha de Nacimiento:" >
           <br></h3>
           <h3 class="text-uppercase mb-12"
         style="text-align: center"> 
