--- a/templates/historial.html
+++ b/templates/historial.html
@@ -45,7 +45,7 @@
               </li>
              
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/otros/{{cedula}}">Odontologia y Oftetricia</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/otros/{{cedula}}">Odontologia y Oftalmología</a>
               </li>
     
               <li class="nav-item mx-0 mx-lg-1">
