--- a/templates/otros.html
+++ b/templates/otros.html
@@ -45,7 +45,7 @@
               </li>
              
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/otros/{{cedula}}">Odontologia y Oftetricia</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/otros/{{cedula}}">Odontologia y Oftalmología</a>
               </li>
     
               <li class="nav-item mx-0 mx-lg-1">
@@ -64,9 +64,9 @@
   <!-- Oftalmologia clinico Section -->
     <section class="Oftalmologia" id="oftalmologia">
         <div class="container">
-            <img class="img-fluid mb-5 d-block mx-auto" style="margin-top:130px" src="{{ url_for('static', filename='img/x.jpg') }}" alt="">
-          <h2 class="text-center text-uppercase text-white">Oftalmologia</h2>
-          <hr class="star-light mb-5">
+            <img class="img-fluid mb-5 d-block mx-auto" style="margin-top:130px" src="{{ url_for('static', filename='img/imagen13.jpg') }}" alt="">
+          <h2 class="text-center text-uppercase text-secondary mb-0">Oftalmologia</h2>
+          <hr class="star-dark mb-5">
           <div class="row">
             <div class="col-lg-12 ml-auto">
               <p class="lead">
@@ -197,7 +197,7 @@
     <!-- Odontologia Section -->
     <section class="bg-primary text-blue mb-0" id="Odontologia">
         <div class="container">
-            <img class="img-fluid mb-5 d-block mx-auto" style="margin-top:130px" src="{{ url_for('static', filename='img/x.jpg') }}" alt="">
+            <img class="img-fluid mb-5 d-block mx-auto" style="margin-top:130px" src="{{ url_for('static', filename='img/imagen12.jpg') }}" alt="">
           <h2 class="text-center text-uppercase text-white">Odontologia</h2>
           <hr class="star-light mb-5">
           <div class="row">
